infrastructure/observability-config/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitoring-default-policy
  namespace: monitoring
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflare-tunnel
            k8s:app.kubernetes.io/name: cloudflared
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - kube-apiserver
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
            k8s:app: notification-controller
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
  egress:
    - toEntities:
        - cluster
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
